# src/MicroweberPackages/Page/Http/Controllers/Admin/PagesController.php
@@ -86,4 +86,40 @@ class PagesController extends AdminDefaultController
      *     )
      * )
      */
+
+    /**
+     * @OA\Delete(
+     *      path="/admin/pages/{id}",
+     *      operationId="deletePage",
+     *      tags={"Pages"},
+     *      summary="Delete existing page",
+     *      description="Deletes a record and returns no content",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Page id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=204,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * )
+     */
 }
