# src/MicroweberPackages/Page/Models/Page.php
@@ -6,6 +6,15 @@ use MicroweberPackages\Content\Scopes\PageScope;
 use MicroweberPackages\Database\Traits\HasSlugTrait;
 use MicroweberPackages\Media\Traits\MediaTrait;
 
+/**
+ * @OA\Schema(
+ *     title="Page",
+ *     description="Page model",
+ *     @OA\Xml(
+ *         name="Page"
+ *     )
+ * )
+ */
 class Page extends Model
 {
     use HasSlugTrait;
@@ -13,6 +22,79 @@ class Page extends Model
 
     protected $table = 'content';
     protected $primaryKey = 'id';
+
+    /**
+     * @OA\Property(
+     *     title="ID",
+     *     description="ID",
+     *     format="int64",
+     *     example=1
+     * )
+     *
+     * @var integer
+     */
+    private $id;
+
+    /**
+     * @OA\Property(
+     *      title="Title",
+     *      description="Title of the new page",
+     *      example="A nice page"
+     * )
+     *
+     * @var string
+     */
+    public $title;
+
+    /**
+     * @OA\Property(
+     *      title="Description",
+     *      description="Description of the new project",
+     *      example="This is new project's description"
+     * )
+     *
+     * @var string
+     */
+    public $description;
+
+    /**
+     * @OA\Property(
+     *     title="Created at",
+     *     description="Created at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var \DateTime
+     */
+    private $created_at;
+
+    /**
+     * @OA\Property(
+     *     title="Updated at",
+     *     description="Updated at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var \DateTime
+     */
+    private $updated_at;
+
+    /**
+     * @OA\Property(
+     *     title="Deleted at",
+     *     description="Deleted at",
+     *     example="2020-01-27 17:50:45",
+     *     format="datetime",
+     *     type="string"
+     * )
+     *
+     * @var \DateTime
+     */
+    private $deleted_at;
 
     protected $fillable = [
         "subtype",
