# src/MicroweberPackages/Product/Http/Controllers/Admin/ProductsController.php
@@ -86,4 +86,40 @@ class ProductsController extends AdminDefaultController
      * )
      */
 
+
+    /**
+     * @OA\Delete(
+     *      path="/admin/products/{id}",
+     *      operationId="deleteProduct",
+     *      tags={"Products"},
+     *      summary="Delete existing product",
+     *      description="Deletes a record and returns no content",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Product id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=204,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * )
+     */
 }
